fix ui-dialog z-index with navbar

--- a/ecomm_jquery/css_ecomm_jquery_v3_bootstrap.css
+++ b/ecomm_jquery/css_ecomm_jquery_v3_bootstrap.css
@@ -701,3 +701,4 @@ root {
     position: relative;
     text-align: center;
 }
+.ui-dialog{z-index:100001}
